fix overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,8 @@
 
 body {
   font-family: "Myriad Regular", sans-serif;
-  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 span {
